
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct snd_ice1712 {int dummy; } ;


 int se200pci_WM8776_write (struct snd_ice1712*,int,unsigned int) ;

__attribute__((used)) static void se200pci_WM8776_set_output_volume(struct snd_ice1712 *ice,
     unsigned int vol1, unsigned int vol2)
{
 se200pci_WM8776_write(ice, 0x03, vol1);
 se200pci_WM8776_write(ice, 0x04, vol2 | 0x100);
}
