; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/ice1712/extr_se.c_se200pci_WM8776_set_output_volume.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/ice1712/extr_se.c_se200pci_WM8776_set_output_volume.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_ice1712 = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_ice1712*, i32, i32)* @se200pci_WM8776_set_output_volume to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @se200pci_WM8776_set_output_volume(%struct.snd_ice1712* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.snd_ice1712*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.snd_ice1712* %0, %struct.snd_ice1712** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load %struct.snd_ice1712*, %struct.snd_ice1712** %4, align 8
  %8 = load i32, i32* %5, align 4
  %9 = call i32 @se200pci_WM8776_write(%struct.snd_ice1712* %7, i32 3, i32 %8)
  %10 = load %struct.snd_ice1712*, %struct.snd_ice1712** %4, align 8
  %11 = load i32, i32* %6, align 4
  %12 = or i32 %11, 256
  %13 = call i32 @se200pci_WM8776_write(%struct.snd_ice1712* %10, i32 4, i32 %12)
  ret void
}

declare dso_local i32 @se200pci_WM8776_write(%struct.snd_ice1712*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
